fixed card info spacing issues

--- a/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
+++ b/assets/css/bootstrap/bootstrap-4.3.1-dist/css/style.css
@@ -5,7 +5,7 @@ body, html {
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 0;
-  background: url("/assets/images/game-wp.jpg");
+  background: url("/assets/images/controller-wp.jpg");
 }
 
 body #mainShell {
